[package]
name = "cp_sat"
version = "0.3.3"
edition = "2018"
description = "Rust bindings to the Google CP-SAT constraint programming solver."
documentation = "https://docs.rs/cp_sat"
repository = "https://github.com/KardinalAI/cp_sat"
license = "Apache-2.0"
keywords = ["constraint", "programming", "CP"]
categories = ["api-bindings", "mathematics", "science"]
readme = "README.md"

[dependencies]
bytes = "1.1.0"
libc = "0.2.101"
prost = "0.8"
smallvec = { version = "1.6.1", default-features = false, features = ["union"]}

[build-dependencies]
anyhow = "1.0"
cc = "1.0"
flate2 = "1.1"
os_info = "3.12"
prost-build = { version = "0.8" }
regex = "1.11.1"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
